Fixed navbar height changing when info card is visible

--- a/src/components/MapView.css
+++ b/src/components/MapView.css
@@ -1,7 +1,8 @@
 main.map-view .navbar {
     display: flex;
     align-items: center;
-    height:40px;
+    height: 40px;
+    min-height: 40px;
     
     background: var(--card-bg-colour);
     box-shadow: var(--box-shadow);
